unpackaged/main/default/objects/Quota__c/fields/Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter__c</fullName>
    <label>Fiscal Quarter</label>
    <type>Date</type>
</CustomField>