unpackaged/main/default/objects/Quota__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <label>Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>