unpackaged/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Quarter__c</columns>
    <columns>Owner_Role__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Quota__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>